--- a/examples/kubernetes/deploy.yaml
+++ b/examples/kubernetes/deploy.yaml
@@ -23,7 +23,7 @@ spec:
         app: composer-lock
     spec:
       containers:
-        - image: quay.io/pantheon-public/composer-lock:latest
+        - image: quay.io/pantheon-public/composer-lock:0.1.0
           imagePullPolicy: Always
           name: composer-lock
           ports:
